@@ -80,6 +80,8 @@ Collate:
     'geom-hex.r'
     'geom-hline.r'
     'geom-linerange.r'
+    'geom-polygon.r'
+    'geom-map.r'
     'geom-path-.r'
     'geom-path-contour.r'
     'geom-path-density2d.r'
@@ -88,7 +90,6 @@ Collate:
     'geom-point-.r'
     'geom-point-jitter.r'
     'geom-pointrange.r'
-    'geom-polygon.r'
     'geom-quantile.r'
     'geom-rect.r'
     'geom-ribbon-.r'
@@ -102,6 +103,9 @@ Collate:
     'ggplot2.r'
     'grob-absolute.r'
     'grob-null.r'
+    'guide-colorbar.r'
+    'guide-legend.r'
+    'guides-.r'
     'guides-axis.r'
     'guides-grid.r'
     'labels.r'
@@ -143,6 +147,8 @@ Collate:
     'scale-size.r'
     'scales-.r'
     'stat-.r'
+    'stat-aggr-2d.r'
+    'stat-aggr-hex.r'
     'stat-bin.r'
     'stat-bin2d.r'
     'stat-binhex.r'
@@ -179,10 +185,5 @@ Collate:
     'utilities.r'
     'xxx-digest.r'
     'zxx.r'
-    'guides-.r'
-    'guide-legend.r'
-    'guide-colorbar.r'
-    'stat-aggr-2d.r'
-    'stat-aggr-hex.r'
     'geom-raster.r'
     'annotation-raster.r'
