@@ -42,6 +42,7 @@ export(geom_hline)
 export(geom_jitter)
 export(geom_line)
 export(geom_linerange)
+export(geom_map)
 export(geom_path)
 export(geom_point)
 export(geom_pointrange)
