@@ -1,6 +1,14 @@
 ggplot2 0.9.0
 ----------------------------------------------------------------
 
+NEW GEOMS/ANNOTATIONS
+
+* `geom_map`
+
+* `geom_raster`
+
+* `annotation_raster`
+
 MINOR CHANGES
 
 * `geom_text` now supports `fontfamily`, `fontface`, and `lineheight`
